--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -119,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "formulario-angular"
+    }
+  },
+  "defaultProject": "formulario-angular",
+  "cli": {
+    "analytics": "d1704cff-d790-48ff-ba19-c742e5ac9153"
+  }
 }
